--- a/css/styles.css
+++ b/css/styles.css
@@ -2127,3 +2127,182 @@ margin-bottom: 16px;
 }
 
 }
+
+/* Offers */
+
+.offer-section {
+  padding-top: 30px;
+  padding-bottom: 50px;
+  background: linear-gradient(180deg, #f5f5f5 0%, rgba(245, 245, 245, 0) 100%);
+}
+
+.offer-section .section-title {
+  margin: 0 auto 85px;
+}
+
+.offer-list {
+  display: flex;
+  flex-direction: column;
+  gap: 66px;
+}
+
+.offer-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.wrap-circle-lightning {
+  width: 150px;
+  height: 150px;
+  background-color: #ffefef;
+  border-radius: 100px;
+  margin-bottom: 35px;
+}
+.wrap-background-lightning {
+  position: relative;
+  top:32px;
+  left: 47px;
+  width: 50px;
+  height: 50px;
+  border-radius: 8px;
+  background-color: var(--color-icon-red);
+  transform-origin: bottom right; 
+  transform: rotate(-15deg);
+}
+.wrap-bg-icon-lightning {
+  position: absolute;
+  top: 13px;
+  left: 6px;
+  width: 50px;
+  height: 50px;
+  border: 2px solid #FF759F;
+  border-radius: 8px;
+  background-color: var(--color-icon-red);
+  transform: rotate(15deg);
+
+}
+
+.client-logo-lightning {
+  position: absolute;
+  top: 8px;
+  left: 7px;  
+}
+
+.wrap-circle-union {
+   width: 150px;
+  height: 150px;
+  background-color: #f2f6ff;;
+  border-radius: 100px;
+  margin-bottom: 35px; /*26*/
+}
+
+.wrap-background-union {
+  position: relative;
+  top:32px;
+  left: 47px;
+  width: 50px;
+  height: 50px;
+  border-radius: 8px;
+  background-color: var(--color-icon-blue);
+  transform-origin: bottom right; 
+  transform: rotate(-15deg);
+}
+
+.wrap-bg-icon-union {
+  position: absolute;
+  top: 13px;
+  left: 6px;
+  width: 50px;
+  height: 50px;
+  border: 2px solid #00c3ff;
+  border-radius: 8px;
+  background-color: var(--color-icon-blue);
+  transform: rotate(15deg);
+}
+
+.client-logo-union {
+  position: absolute;
+  top: 6px;
+  left: 6px;
+}
+
+.offer-item-title {
+  color: #000;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  margin-bottom: 16px;
+ 
+}
+
+.offer-item-text {
+  width: 215px;
+  font-size: 18px;
+  line-height: 1.78;
+  text-align: center;
+  margin-bottom: 12px;
+}
+
+
+.offer-link.link {
+  color: #000;
+  font-weight: 500; 
+  line-height: 1.75;
+  padding: 0;
+}
+
+ @media screen and (min-width: 1150px) {
+  .offer-section {
+  padding-top: 58px;
+  padding-bottom: 75px;
+}
+
+.offer-section .section-title {
+  max-width: 537px;
+  margin-bottom: 50px;
+}
+
+.offer-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 227px;
+}
+
+.wrap-circle-lightning {
+  margin-bottom: 27px; 
+}
+
+.wrap-circle-union {
+  margin-bottom: 27px;
+}
+
+
+.offer-section .section-title {
+  margin-bottom: 93px;
+}
+
+.offer-link.link:hover,
+.offer-link.link:focus {
+  color: var(--color-brand);
+}
+
+}
+
+/* Promo */
+
+@media screen and (min-width: 1150px) {
+  .promo-section.customers {
+  padding: 75px 0;
+}
+}
+
+.footer-section.customers {
+  padding-top: 50px;
+}  
+@media screen and (min-width: 1150px) {
+  .footer-section.customers {
+  padding-top: 75px;
+}  
+}
