--- a/css/styles.css
+++ b/css/styles.css
@@ -148,13 +148,6 @@ button {
     margin: auto;
 }
 
-/* @media screen and (min-width: 768px) {
-    .container {
-    max-width: 768px;
-    align-items: center;
-    }
-} */
-
 @media screen and (min-width: 1150px) {
     .container {
     max-width: 1150px;
@@ -1005,11 +998,31 @@ button {
 
 .strategies-list {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   gap: 16px;
-  margin-bottom: 40px;
+  /* margin-bottom: 40px; */
 }
+
+
+.slick-dotted.slick-slider {
+  margin-bottom: 0;
+}
+.slick-slider {
+  width: 100%;
+  overflow: hidden;
+}
+
+.slick-slide {
+  display: flex !important;
+  justify-content: center;
+}
+
+.slick-track {
+  display: flex;
+}
+
+
 
 .strategies-image {
   margin-bottom: 24px;
@@ -1027,7 +1040,9 @@ button {
   font-weight: 700;
 }
 .strategies-card {
-  padding-bottom: 40px;/*?*/
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 40px;
 }
 
 .strategies-card-title {
